# murilobiss-dataeng

./: .gitignore  README.md
cloud-aws-projects/: README.md
cloud-azure-projects/: README.md
cloud-gcp-projects/: README.md
cloud-gcp-projects/ecommerce-analytics-pipeline/: README.md  env.example  requirements.txt  test_imports.py
cloud-gcp-projects/ecommerce-analytics-pipeline/config/credentials/: .gitkeep  README.md
cloud-gcp-projects/ecommerce-analytics-pipeline/config/environments/: dev.yaml  prod.yaml  staging.yaml
cloud-gcp-projects/ecommerce-analytics-pipeline/dags/: ecommerce_etl_dag.py
cloud-gcp-projects/ecommerce-analytics-pipeline/data/curated/: .gitkeep  README.md
cloud-gcp-projects/ecommerce-analytics-pipeline/data/processed/: .gitkeep  README.md
cloud-gcp-projects/ecommerce-analytics-pipeline/data/raw/: .gitkeep  README.md
cloud-gcp-projects/ecommerce-analytics-pipeline/docs/: .gitkeep  README.md
cloud-gcp-projects/ecommerce-analytics-pipeline/notebooks/: .gitkeep  README.md
cloud-gcp-projects/ecommerce-analytics-pipeline/scripts/: .gitkeep  README.md
cloud-gcp-projects/ecommerce-analytics-pipeline/scripts/development/: run_tests.py
cloud-gcp-projects/ecommerce-analytics-pipeline/src/: __init__.py  main.py
cloud-gcp-projects/ecommerce-analytics-pipeline/terraform/: main.tf  variables.tf
development-tools/: README.md
development-tools/repository-automation/: CLONE_INSTRUCTIONS.md  clone_repositories.py  requirements.txt  run_clone.sh
full-stack-applications/: README.md
full-stack-applications/fastfood-microservices/: .gitignore  Dockerfile  README.md  render.yaml
full-stack-applications/fastfood-microservices/backend/: requirements.txt
full-stack-applications/fastfood-microservices/docs/: AMBIENTES.md  README.md
full-stack-applications/fastfood-microservices/frontend/: README.md  index.html
full-stack-applications/fastfood-microservices/k8s/: app-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres-deployment.yaml  postgres-persistent-volume.yaml  secret.yaml
full-stack-applications/fastfood-microservices/scripts/: main.sh
full-stack-applications/mbx-agency-website/: README.md  index.html  script.js  styles.css
full-stack-applications/professional-portfolio/: .gitignore  README.md  index.html  resume.html  script.js  styles.css
full-stack-applications/real-estate-nextjs/: README.md  next.config.ts
learning-certifications/: README.md
learning-certifications/data-engineering-core/: README.md
learning-certifications/dataexpert-bootcamp/: README.md
modern-data-platforms/: README.md
modern-data-platforms/social-fit-data-intelligence/: .gitignore  LICENSE  Makefile  ORGANIZATION.md  README.md  env_example.txt  index.html  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  supabase_setup.py
modern-data-platforms/social-fit-data-intelligence/.github/workflows/: deploy.yml
modern-data-platforms/social-fit-data-intelligence/dashboard/: DEPLOY.md  README_DASHBOARD.md  config.py  setup_dashboard.py
modern-data-platforms/social-fit-data-intelligence/docs/: API.md  DEVELOPMENT.md  TECHNICAL_DOCUMENTATION.md
modern-data-platforms/social-fit-data-intelligence/scripts/: check_dashboard_data.py  clean_duplicates.py  deploy_dashboard.sh  test_analytics.py
modern-data-platforms/social-fit-data-intelligence/src/: __init__.py  app.py
modern-data-platforms/social-fit-data-intelligence/src/analytics/: __init__.py  analytics.py
modern-data-platforms/social-fit-data-intelligence/src/config/: __init__.py  config.py
modern-data-platforms/social-fit-data-intelligence/src/database/: __init__.py  database.py
modern-data-platforms/social-fit-data-intelligence/src/etl/: __init__.py  etl_pipeline.py
modern-data-platforms/social-fit-data-intelligence/src/models/: __init__.py  models.py
modern-data-platforms/social-fit-data-intelligence/tests/: __init__.py  conftest.py
modern-data-platforms/social-fit-data-intelligence/tests/integration/: __init__.py  test_database.py  test_pipeline.py  test_supabase_connection.py
modern-data-platforms/social-fit-data-intelligence/tests/unit/: __init__.py  test_etl.py  test_models.py
real-time-data-streaming/: README.md
(+121 files in other folders)
